# smbprotocol

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  README.md  appveyor.yml  azure-pipelines.yml  jordan.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
build-scripts/: check_samba.py  main.yml  setup_samba.sh
build_helpers/: check-smb.py  lib.sh  run-ci.sh  samba-setup.sh  win-setup.ps1
docs/: .gitignore
docs/source/: api.rst  conf.py  index.rst
examples/: directory-management.py  file-management.py
examples/high-level/: directory-management.py  file-management.py
examples/low-level/: directory-management.py  file-management.py
reports/: coverage.coverage
reports/junit/: python-3.11.3-Linux-6.4.9-1-MANJARO-x86_64-with-glibc2.38.xml
smbclient/: __init__.py  _io.py  _os.py  _pool.py  path.py  shutil.py
smbprotocol/: __init__.py  _compat.py  _text.py  change_notify.py  client.py  connection.py  constants.py  create_contexts.py  dfs.py  exceptions.py  file.py  file_info.py  header.py  ioctl.py  messages.py  open.py  query_info.py  reparse_point.py  security_descriptor.py  session.py  spnego.py  structure.py  transport.py  tree.py
smbprotocol/transport/: direct_tcp.py
src/smbclient/: __init__.py  _io.py  _os.py  _pool.py  path.py  shutil.py
src/smbprotocol/: __init__.py  _text.py  change_notify.py  connection.py  create_contexts.py  dfs.py  exceptions.py  file_info.py  header.py  ioctl.py  open.py  query_info.py  reparse_point.py  security_descriptor.py  session.py  structure.py  transport.py  tree.py
src/smbprotocol/_transport/: __init__.py  _base.py  _tcp.py
tests/: .coveragerc  conftest.py  runner.py  test_change_notify.py  test_connection.py  test_constants.py  test_create_contexts.py  test_dfs.py  test_exceptions.py  test_file_info.py  test_header.py  test_ioctl.py  test_messages.py  test_open.py  test_query_info.py  test_reparse_point.py  test_security_descriptor.py  test_session.py  test_smbclient_io.py  test_smbclient_os.py  test_smbclient_path.py  test_smbclient_pool.py  test_smbclient_shutil.py  test_spnego.py  test_structure.py  test_text.py  test_transport.py  test_tree.py  utils.py
tests/integration/: README.md  Vagrantfile  ansible.cfg  inventory.yml  main.yml  tests.yml
tests/integration/templates/: krb5.conf.tmpl  test_integration.py.tmpl
tests/test_responses/TestTcp-test_normal_send_receive/: 1-request  1-response
