[build-system]
requires = [
    "setuptools >= 61.0.0",  # Support for setuptools config in pyproject.toml
]
build-backend = "setuptools.build_meta"

[project]
name = "smbprotocol"
version = "1.14.0"
description = "Interact with a server using the SMB 2/3 Protocol"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    { name = "Jordan Borean", email = "jborean93@gmail.com" }
]
keywords = ["smb", "smb2", "smb3", "cifs", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]
dependencies = [
    "cryptography >= 2.0",
    "pyspnego",
]

[project.optional-dependencies]
kerberos = ["pyspnego[kerberos]"]

[project.urls]
homepage = "https://github.com/jborean93/smbprotocol"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--import-mode=importlib"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = sanity,py38,py39,py310,py311,py312
skip_missing_interpreters = true
isolated_build = true

[testenv]
deps =
    -r{toxinidir}/requirements-dev.txt

commands =
    python -m pytest -v --cov smbclient --cov smbprotocol --cov-report term-missing

passenv =
    SMB_*

[testenv:sanity]
commands =
    python -m black . --check
    python -m isort . --check-only
"""
