[build-system]
requires = [
    "setuptools >= 77.0.0",  # Support for SPDX license expressions
]
build-backend = "setuptools.build_meta"

[project]
name = "smbprotocol"
version = "1.16.0"
description = "Interact with a server using the SMB 2/3 Protocol"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Jordan Borean", email = "jborean93@gmail.com" }
]
keywords = ["smb", "smb2", "smb3", "cifs", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "cryptography >= 2.0",
    "pyspnego",
]

[project.optional-dependencies]
kerberos = ["pyspnego[kerberos]"]

[project.urls]
homepage = "https://github.com/jborean93/smbprotocol"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = "tests"
addopts = "--import-mode=importlib"
